--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         
         /* Navigation Glass Effect */
         .nav-glass { background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); border-bottom: 1px solid rgba(0, 0, 0, 0.05); }
+
+        /* Mobile Menu Glass Effect - Stronger background for visibility */
+        .mobile-menu-glass { 
+            background: rgba(255, 255, 255, 0.95); 
+            backdrop-filter: blur(24px); 
+            -webkit-backdrop-filter: blur(24px); 
+            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
         
         /* Sliders */
         input[type="range"] { -webkit-appearance: none; width: 100%; height: 6px; background: #e5e5e5; border-radius: 4px; outline: none; }
@@ -176,10 +185,10 @@
         </div>
 
         <!-- Mobile Dropdown -->
-        <div id="mobile-menu" class="hidden absolute top-16 left-0 w-full bg-white/98 backdrop-blur-xl border-b border-gray-100 shadow-2xl md:hidden flex-col p-6 space-y-4 text-center z-40">
-            <button onclick="switchTab('philosophy'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100">Philosophy</button>
-            <button onclick="switchTab('benchmarks'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100">Benchmarks</button>
-            <button onclick="switchTab('concepts'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100">Concept</button>
+        <div id="mobile-menu" class="hidden absolute top-16 left-0 w-full mobile-menu-glass md:hidden flex-col p-6 space-y-4 text-center z-40 transition-all duration-300">
+            <button onclick="switchTab('philosophy'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100/50">Philosophy</button>
+            <button onclick="switchTab('benchmarks'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100/50">Benchmarks</button>
+            <button onclick="switchTab('concepts'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800 border-b border-gray-100/50">Concept</button>
             <button onclick="switchTab('calculator'); toggleMobileMenu()" class="block w-full py-4 text-sm font-bold uppercase tracking-widest text-gray-800">Investor Engine</button>
             <button onclick="scrollToId('calculator'); toggleMobileMenu()" class="w-full bg-black text-white px-6 py-4 rounded-xl text-sm font-bold uppercase tracking-widest shadow-lg mt-2">Run Calculator</button>
         </div>
